--- a/cloud/package.json
+++ b/cloud/package.json
@@ -6,7 +6,9 @@
 		"fluent-ffmpeg": "^2.1.2",
 		"mongodb": "^4.14.0",
 		"multer": "^1.4.5-lts.1",
-		"react": "^18.2.0"
+		"node-aplay": "^1.0.3",
+		"react": "^18.2.0",
+		"react-audio-player": "^0.17.0"
 	},
 	"devDependencies": {
 		"nodemon": "^2.0.20"
